@@ -1,0 +1,55 @@
+<?php
+// $Id: views_handler_field_xss.test,v 1.1.4.2 2010-12-24 07:46:00 dereine Exp $
+module_load_include('test', 'views', 'tests/views_query');
+
+/**
+ * @see CommonXssUnitTest
+ */
+class ViewsHandlerTestXss extends ViewsSqlTest {
+  public static function getInfo() {
+    return array(
+      'name' => 'Field: Xss',
+      'description' => 'Test the core views_handler_field_css handler.',
+      'group' => 'Views Handlers',
+    );
+  }
+
+  function dataHelper() {
+    $map = array(
+      'John' => 'John',
+      "Foo\xC0barbaz" => '',
+      'Fooÿñ' => 'Fooÿñ'
+    );
+
+    return $map;
+  }
+
+
+  function viewsData() {
+    $data = parent::viewsData();
+    $data['views_test']['name']['field']['handler'] = 'views_handler_field_xss';
+
+    return $data;
+  }
+
+  public function testFieldXss() {
+    $view = $this->getBasicView();
+
+    $view->display['default']->handler->override_option('fields', array(
+      'name' => array(
+        'id' => 'name',
+        'table' => 'views_test',
+        'field' => 'name',
+      ),
+    ));
+
+    $this->executeView($view);
+
+    $counter = 0;
+    foreach ($this->dataHelper() as $input => $expected_result) {
+      $view->result[$counter]->views_test_name = $input;
+      $this->assertEqual($view->field['name']->advanced_render($view->result[$counter]), $expected_result);
+      $counter++;
+    } 
+  }
+}
