@@ -1,5 +1,5 @@
 <?php
-// $Id: views_query.test,v 1.1.4.6 2010-12-01 00:02:06 merlinofchaos Exp $
+// $Id: views_query.test,v 1.1.4.7 2010-12-24 07:46:00 dereine Exp $
 
 /**
  * @file
@@ -129,45 +129,49 @@ abstract class ViewsSqlTest extends ViewsTestCase {
   * The schema definition.
   */
   protected function schemaDefinition() {
-  $schema['views_test'] = array(
-    'description' => 'Basic test table for Views tests.',
-    'fields' => array(
-      'id' => array(
-        'type' => 'serial',
-        'unsigned' => TRUE,
-        'not null' => TRUE,
+    $schema['views_test'] = array(
+      'description' => 'Basic test table for Views tests.',
+      'fields' => array(
+        'id' => array(
+          'type' => 'serial',
+          'unsigned' => TRUE,
+          'not null' => TRUE,
+        ),
+        'name' => array(
+          'description' => "A person's name",
+          'type' => 'varchar',
+          'length' => 255,
+          'not null' => TRUE,
+          'default' => '',
+        ),
+        'age' => array(
+          'description' => "The person's age",
+          'type' => 'int',
+          'unsigned' => TRUE,
+          'not null' => TRUE,
+          'default' => 0),
+        'job' => array(
+          'description' => "The person's job",
+          'type' => 'varchar',
+          'length' => 255,
+          'not null' => TRUE,
+          'default' => 'Undefined',
+        ),
       ),
-      'name' => array(
-        'description' => "A person's name",
-        'type' => 'varchar',
-        'length' => 255,
-        'not null' => TRUE,
-        'default' => '',
+      'primary key' => array('id'),
+      'unique keys' => array(
+        'name' => array('name')
       ),
-      'age' => array(
-        'description' => "The person's age",
-        'type' => 'int',
-        'unsigned' => TRUE,
-        'not null' => TRUE,
-        'default' => 0),
-      'job' => array(
-        'description' => "The person's job",
-        'type' => 'varchar',
-        'length' => 255,
-        'not null' => TRUE,
-        'default' => 'Undefined',
+      'indexes' => array(
+        'ages' => array('age'),
       ),
-    ),
-    'primary key' => array('id'),
-    'unique keys' => array(
-      'name' => array('name')
-    ),
-    'indexes' => array(
-      'ages' => array('age'),
-    ),
-  );
-  return $schema;
-}
+    );
+    return $schema;
+  }
+
+  protected function viewsPlugins() {
+    return array();
+  }
 
   /**
    * The views data definition.
