@@ -198,6 +198,7 @@ Views 6.x-3.0-dev
     o #972620 by dereine: Add an administrative title field for all handlers to make it more possible to distinguish similar fields from each other in the UI.
     o #905712 by dagmar: Add Published/Not published as text options to published field.
     o #816354 by dereine: Provide a field to create administrative comments on displays.
+    o #807942, #807982, #809936, #810010, #811294, #811266 by dereine: Backport quite a lot of handler tests.
 
 Views 6.x-3.0-alpha3
     o #705668 by dereine: Fix glossary view, add tests for glossary view.
